--- a/app/src/main/res/layout/activity_data_layanan.xml
+++ b/app/src/main/res/layout/activity_data_layanan.xml
@@ -5,10 +5,11 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bglaundryyrill"
     tools:context=".Data_Layanan">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_data_pelanggan"
+        android:id="@+id/rv_data_layanan"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/card_layanan_pelanggan">
@@ -22,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/pluss"
-            android:backgroundTint="#D4EBF8"
+            android:backgroundTint="#1F509A"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginEnd="16dp"
