--- a/app/src/main/res/layout/activity_data_pelanggan.xml
+++ b/app/src/main/res/layout/activity_data_pelanggan.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="+"
-            android:backgroundTint="#D4EBF8"
+            android:backgroundTint="#1F509A"
             android:src="@drawable/pluss"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
