--- a/app/src/main/res/layout/activity_tambah_layanan.xml
+++ b/app/src/main/res/layout/activity_tambah_layanan.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvJudul"
+        android:id="@+id/tvJudul_layanan"
         android:text="@string/card_tambah_layanan"
         android:layout_marginTop="80dp"
         android:textSize="24sp"
@@ -24,9 +24,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_nama_layanan"
-        android:text="@string/card_tambah_nama"
-        app:layout_constraintTop_toBottomOf="@+id/tvJudul"
+        android:id="@+id/tvNama_layanan"
+        android:text="@string/card_tambah_nama_layanan"
+        app:layout_constraintTop_toBottomOf="@+id/tvJudul_layanan"
         android:textSize="18sp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
@@ -34,13 +34,13 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <EditText
-        android:id="@+id/etNamaLengkap_layanan"
+        android:id="@+id/etNama_layanan"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:hint="@string/card_tambah_namalengkap"
+        android:hint="@string/card_tambah_nama_layanan"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_nama_layanan"
+        app:layout_constraintTop_toBottomOf="@+id/tvNama_layanan"
         android:padding="10dp"
         android:fontFamily="@font/poppinsmediumitalic"
         android:background="@drawable/edit_text_border"
@@ -48,24 +48,24 @@
         android:layout_marginBottom="10dp"
         />
     <TextView
+        android:id="@+id/tvHarga_layanan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_alamat_layanan"
-        android:text="@string/card_pelanggan_alamat"
-        app:layout_constraintTop_toBottomOf="@+id/etNamaLengkap_layanan"
+        android:text="@string/card_tambah_harga_layanan"
+        app:layout_constraintTop_toBottomOf="@+id/etNama_layanan"
         android:textSize="18sp"
         android:layout_marginStart="30dp"
         android:fontFamily="@font/poppinsmedium"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"/>
     <EditText
-        android:id="@+id/etAlamat_layanan"
+        android:id="@+id/etHarga_layanan"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:hint="@string/card_pelanggan_alamat"
+        android:hint="@string/card_tambah_harga_layanan"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_alamat_layanan"
+        app:layout_constraintTop_toBottomOf="@+id/tvHarga_layanan"
         android:padding="10dp"
         android:fontFamily="@font/poppinsmediumitalic"
         android:background="@drawable/edit_text_border"
@@ -73,66 +73,42 @@
         android:layout_marginBottom="10dp"
         />
     <TextView
+        android:id="@+id/tvTambah_Cabang_layanan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvNoHp_layanan"
-        android:text="@string/card_tambah_nohp_aktif"
-        app:layout_constraintTop_toBottomOf="@+id/etAlamat_layanan"
+        android:text="@string/card_tambah_cabang_layanan"
+        app:layout_constraintTop_toBottomOf="@+id/etHarga_layanan"
         android:textSize="18sp"
         android:layout_marginStart="30dp"
         android:fontFamily="@font/poppinsmedium"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"/>
     <EditText
-        android:id="@+id/etNoHp_layanan"
+        android:id="@+id/et_Tambah_Cabang_layanan"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:hint="@string/card_tambah_nohp_aktif"
+        android:hint="@string/card_tambah_cabang_layanan"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvNoHp_layanan"
+        app:layout_constraintTop_toBottomOf="@+id/tvTambah_Cabang_layanan"
         android:padding="10dp"
         android:fontFamily="@font/poppinsmediumitalic"
         android:background="@drawable/edit_text_border"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="10dp"
         />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvCabang_layanan"
-        android:text="@string/card_pegawai_cabang"
-        app:layout_constraintTop_toBottomOf="@+id/etNoHp_layanan"
-        android:textSize="18sp"
-        android:layout_marginStart="30dp"
-        android:fontFamily="@font/poppinsmedium"
-        android:layout_marginTop="30dp"
-        app:layout_constraintStart_toStartOf="parent"/>
-    <EditText
-        android:id="@+id/etCabang_layanan"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/card_nama_cabang"
-        android:layout_marginTop="15dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCabang_layanan"
-        android:padding="10dp"
-        android:fontFamily="@font/poppinsmediumitalic"
-        android:background="@drawable/edit_text_border"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="10dp"
-        />
+
 
     <Button
         android:id="@+id/buttonSimpan_layanan"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:text="@string/card_simpan"
+        android:text="@string/card_tambah_layanan_simpan"
         android:backgroundTint="#133E87"
         android:padding="12dp"
         android:fontFamily="@font/poppinssemibold"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/etCabang_layanan"
+        android:layout_marginTop="150dp"
+        app:layout_constraintTop_toBottomOf="@id/et_Tambah_Cabang_layanan"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
