--- a/app/src/main/res/layout/activity_tambah_pegawai.xml
+++ b/app/src/main/res/layout/activity_tambah_pegawai.xml
@@ -28,7 +28,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvJudul_pegawai"
         android:textSize="18sp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/poppinsmedium"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -41,7 +41,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvNama_pegawai"
         android:padding="10dp"
-        android:fontFamily="@font/poppinsmediumitalic"
+        android:fontFamily="@font/poppinsblackitalic"
         android:background="@drawable/edit_text_border"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="10dp"
@@ -66,7 +66,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvAlamat_pegawai"
         android:padding="10dp"
-        android:fontFamily="@font/poppinsmediumitalic"
+        android:fontFamily="@font/poppinsblackitalic"
         android:background="@drawable/edit_text_border"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="10dp"
@@ -91,7 +91,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvNoHp_pegawai"
         android:padding="10dp"
-        android:fontFamily="@font/poppinsmediumitalic"
+        android:fontFamily="@font/poppinsblackitalic"
         android:background="@drawable/edit_text_border"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="10dp"
@@ -117,7 +117,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTerdaftar_pegawai"
         android:padding="10dp"
-        android:fontFamily="@font/poppinsmediumitalic"
+        android:fontFamily="@font/poppinsblackitalic"
         android:background="@drawable/edit_text_border"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="10dp"
@@ -143,7 +143,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvCabang_pegawai"
         android:padding="10dp"
-        android:fontFamily="@font/poppinsmediumitalic"
+        android:fontFamily="@font/poppinsblackitalic"
         android:background="@drawable/edit_text_border"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="10dp"
