--- a/app/src/main/res/layout-land/card_layanan_pelanggan.xml
+++ b/app/src/main/res/layout-land/card_layanan_pelanggan.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/tv_card_pelanggan"
+    android:id="@+id/card_layanan"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
     app:cardCornerRadius="10dp">
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:elevation="12dp">
 
         <TextView
-            android:id="@+id/id_pelanggan"
+            android:id="@+id/id_layanan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#577BC1"
             android:fontFamily="@font/poppinsmediumitalic"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:padding="5dp"
-            android:text="@string/card_pelanggan_id"
+            android:text="@string/card_layanan_id"
             android:textSize="16sp" />
 
     </androidx.cardview.widget.CardView>
@@ -29,10 +30,10 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tv_nama_pelanggan"
+            android:id="@+id/tv_namalayanan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/card_pelanggan_nama"
+            android:text="@string/card_layanan_nama"
             android:paddingStart="10dp"
             android:fontFamily="@font/poppinsmedium"
             android:layout_marginTop="40dp"
@@ -41,39 +42,25 @@
             />
 
         <TextView
-            android:id="@+id/tv_nohp_pelanggan"
+            android:id="@+id/tv_harga"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/card_pelanggan_nohp"
+            android:text="@string/card_layanan_harga"
             android:paddingStart="10dp"
             android:fontFamily="@font/poppinsmedium"
             android:textStyle="bold"
             android:textSize="15sp"
             />
-
         <TextView
-            android:id="@+id/tv_terdaftar_pelanggan"
+            android:id="@+id/tv_layanancabang"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/card_pelanggan_terdaftar"
+            android:text="@string/card_layanan_cabang"
             android:paddingStart="10dp"
-            android:fontFamily="@font/poppinsmedium"
             android:textStyle="bold"
+            android:fontFamily="@font/poppinsmedium"
             android:textSize="15sp"
             />
-
-
-        <TextView
-            android:id="@+id/tv_alamat_pelanggan"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/card_pelanggan_alamat"
-            android:paddingStart="10dp"
-            android:fontFamily="@font/poppinsmedium"
-            android:textStyle="bold"
-            android:textSize="15sp"
-            />
-
 
         <GridLayout
             android:layout_width="wrap_content"
@@ -83,32 +70,10 @@
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="5dp"
-            android:layout_marginStart="240dp"
+            android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
             >
 
-            <Button
-                android:id="@+id/bt_hubungipelanggan"
-                android:layout_width="160dp"
-                android:layout_height="wrap_content"
-                android:text="@string/card_pelanggan_hubungi"
-                android:layout_marginEnd="5dp"
-                android:textColor="@color/white"
-                android:fontFamily="@font/poppinssemibold"
-                android:layout_marginStart="5dp"
-                android:backgroundTint="#133E87"
-                />
-            <Button
-                android:id="@+id/bt_lihatpelanggan"
-                android:layout_width="160dp"
-                android:layout_height="wrap_content"
-                android:text="@string/card_pelanggan_lihat"
-                android:fontFamily="@font/poppinssemibold"
-                android:layout_marginEnd="5dp"
-                android:layout_marginStart="5dp"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/black"
-                />
 
         </GridLayout>
 
