--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -89,6 +89,7 @@
                 android:background="#A6AEBF" />
 
                 <LinearLayout
+                    android:id="@+id/cardAkun"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
@@ -110,6 +111,7 @@
                         android:layout_marginTop="4dp" />
                 </LinearLayout>
             <LinearLayout
+                android:id="@+id/cardPegawai"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
@@ -130,6 +132,7 @@
                     android:layout_marginTop="4dp" />
             </LinearLayout>
             <LinearLayout
+                android:id="@+id/cardCabang"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
@@ -155,13 +158,13 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/fitur"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="275dp"
         app:layout_constraintStart_toEndOf="@+id/cardEstimation"
         app:layout_constraintTop_toBottomOf="@+id/tvTanggal"
         app:layout_constraintEnd_toEndOf="parent">
 
          <androidx.cardview.widget.CardView
-                android:id="@+id/cardAkun"
+                android:id="@+id/cv_transaksi"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 app:cardCornerRadius="10dp"
@@ -177,6 +180,7 @@
                     android:gravity="center">
 
                     <ImageView
+                        android:id="@+id/icon_transaksi"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:src="@drawable/transaction" />
@@ -198,7 +202,7 @@
                 app:cardCornerRadius="10dp"
                 app:cardElevation="6dp"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/cardAkun"
+                app:layout_constraintStart_toEndOf="@id/cv_transaksi"
                 android:layout_margin="8dp">
 
                 <LinearLayout
@@ -254,12 +258,12 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/cardPegawai"
+                android:id="@+id/cv_pelanggan"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="6dp"
-                app:layout_constraintTop_toBottomOf="@id/cardAkun"
+                app:layout_constraintTop_toBottomOf="@id/cv_transaksi"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_margin="8dp">
 
@@ -285,13 +289,13 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/cardCabang"
+                android:id="@+id/cv_laporan"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="6dp"
                 app:layout_constraintTop_toBottomOf="@id/cardLayanan"
-                app:layout_constraintStart_toEndOf="@id/cardPegawai"
+                app:layout_constraintStart_toEndOf="@id/cv_pelanggan"
                 android:layout_margin="8dp">
 
                 <LinearLayout
@@ -322,7 +326,7 @@
                 app:cardCornerRadius="10dp"
                 app:cardElevation="6dp"
                 app:layout_constraintTop_toBottomOf="@id/cardTambahan"
-                app:layout_constraintStart_toEndOf="@id/cardCabang"
+                app:layout_constraintStart_toEndOf="@id/cv_laporan"
                 android:layout_margin="8dp">
 
                 <LinearLayout
