--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -191,7 +191,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Transaksi"
+                            android:text="Laporan"
                             android:textSize="14sp"
                             android:fontFamily="@font/poppinssemibold"
                             android:layout_marginTop="8dp" />
